fix overflow issues on comments in safair

--- a/src/App.css
+++ b/src/App.css
@@ -387,8 +387,8 @@ margin-left: 10px;
   margin: 10px;
   word-wrap: break-word;
   white-space: normal;
-
-  
+  webkit-hyphens: auto;
+  overflow-wrap: break-word;
 }
 
 .votes {
